--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
 FEScript-noFullWidthBackup.glyphs
 AugmentedFarEasternScript-Regular-glyphs.otf
-preview-files/repo-preview.psd
+preview-files/*.*
 .DS_Store
